@@ -39,9 +39,7 @@
                  '("\\(.*\\):\\([0-9]+\\):\\([0-9]+\\): \\(.*\\)" 1 2 3 4))
     (defun flymake-perl-init ()
       (let* ((temp-file (flymake-init-create-temp-buffer-copy
-                          (if (fboundp 'flymake-create-temp-copy)
-                            'flymake-create-temp-copy
-                            'flymake-create-temp-inplace)))
+                          'flymake-create-temp-with-folder-structure))
              (local-file (file-relative-name temp-file
                            (file-name-directory buffer-file-name)))
              (include-dir (if (fboundp 'flymake-find-perl-lib-dir) (flymake-find-perl-lib-dir buffer-file-name))))
@@ -54,6 +52,16 @@
               (if flymake-perlcritic-profile (concat "--profile " flymake-perlcritic-profile) "")
               (concat "--severity " (number-to-string flymake-perlcritic-severity))))))
       )
+    (defun flymake-perl-cleanup ()
+      "Cleanup after `flymake-perl-init' -- delete temp file and dirs."
+      (flymake-safe-delete-file flymake-temp-source-file-name)
+      (when flymake-temp-source-file-name
+        (flymake-delete-temp-directory
+         (file-name-directory flymake-temp-source-file-name))))
+    (let ((mode-and-masks (flymake-get-file-name-mode-and-masks "example.pm")))
+      (if (nth 1 mode-and-masks)
+        (setcdr mode-and-masks (cons 'flymake-perl-cleanup (cddr mode-and-masks)))
+        (setcdr mode-and-masks (cons 'flymake-perl-cleanup nil))))
     (add-hook 'perl-mode-hook (lambda() (flymake-mode 1)))
     )
   )
